# cramming

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.MD  MANIFEST.in  README.md  citation.cff  data_card.md  environment.yml  eval.py  eval_GLUE.sh  load_local_model.py  model_card.md  pretrain.py  pyproject.toml  sanity_checks2024.sh  setup.cfg  upload_processed_dataset.py
cramming/: __init__.py  utils.py
cramming/architectures/: __init__.py  attention.py  components.py  construction.py  crammed_bert.py  embeddings.py  fixed_cramlm.py  funnel_transformers.py  fused_layers.py  huggingface_interface.py  losses.py  recurrent_transformers.py  sanity_check.py  scriptable_bert.py  utils.py
cramming/backend/: __init__.py  deepspeed_integration.py  prepare_backend.py  torch_default.py  utils.py
cramming/backend/optimizers/: __init__.py  adahessian.py  agd.py  nanoT5_optimizer.py  optimizer_modifiers.py  progressive_batching.py  schedulers.py  sophia.py
cramming/backend/optimizers/shampoo/: CONTRIBUTING.md  LICENSE  README.md  __init__.py  matrix_functions.py  shampoo.py  shampoo_utils.py
cramming/config/: cfg_eval.yaml  cfg_pretrain.yaml
cramming/config/arch/: bert-base.yaml  bert-c2.yaml  bert-c3.yaml  bert-c4.yaml  bert-c5.yaml  bert-i4.yaml  bert-large-izsak.yaml  bert-original.yaml  bert-tiny.yaml  crammed-bert-simple.yaml  crammed-bert.yaml  crammed-large-izsak.yaml  funnel-c2.yaml  hf-bert-base.yaml  hf-bert-tiny.yaml  recurrent-c2.yaml  sanitycheck.yaml
cramming/config/arch/v1/: bert-base.yaml  bert-c2.yaml  bert-c3.yaml  bert-c4.yaml  bert-c5.yaml  bert-i4.yaml  bert-large-izsak.yaml  bert-original.yaml  bert-tiny.yaml  crammed-bamboo.yaml  funnel-c2.yaml  recurrent-c2.yaml  sanitycheck.yaml
cramming/config/data/: bert-default.yaml  bookcorpus-wikipedia.yaml  c4-subset-processed.yaml  c4-subset.yaml  openweb.yaml  oscar.yaml  pile-readymade.yaml  raw-wikipedia-dumps.yaml  roots-mini.yaml  roots-readymade.yaml  sanity-check-1.yaml  sanity-check-2.yaml  the-pile-dedup.yaml  the-pile-natural-stream.yaml  the-pile-natural.yaml  the-pile-processed.yaml  the-pile-stream.yaml  the-pile.yaml
cramming/config/data/sources/: ag_news.yaml  bookcorpus.yaml  c4.yaml  dash_books.yaml  fake.yaml  iwslt.yaml  no_code_stackexchange.yaml  openwebtext.yaml  oscar.yaml  raw_wiki_dump.yaml  the_pile.yaml  the_pileCC.yaml  the_pile_dedup.yaml  the_pile_natural.yaml  (+9 more)
cramming/config/eval/: GLUE.yaml  GLUE_sane.yaml  GLUEmosbach.yaml  RACE.yaml  SWAG.yaml  mnli.yaml  superGLUE.yaml
cramming/config/impl/: _default.yaml  deepspeed-hf.yaml  deepspeed.yaml  onnx.yaml  torch-default.yaml
cramming/config/train/: bert-base.yaml  bert-izsak.yaml  bert-o1.yaml  bert-o2.yaml  bert-o3.yaml  bert-o4.yaml  bert-original.yaml
cramming/config/wandb/: default.yaml  none.yaml
cramming/data/: __init__.py  cached_datasets.py  curriculum_sorting.py  deduplicate.py  downstream_task_preparation.py  generation_gibbs.py  lmdb_datasets.py  pretraining_preparation.py  tokenizer_preparation.py  utils.py
scripts/: architecture_ablations_c5_o3.sh  broad_ablation_c5_o3_2080ti.sh  broad_ablation_c5_o3_a4000.sh  broad_ablation_c5_o3_a6000.sh  data_ablations_a4000.sh  data_ablations_a6000.sh  eval_baselines.sh  final_story_cb_o4_2080ti.sh  final_story_cb_o4_a4000.sh  final_story_cb_o4_a6000.sh  preprocessing.sh  reproducing_bert.sh  scaling_law_cb_o4_a4000.sh  scaling_law_cb_o4_a5000.sh  scaling_law_cb_o4_a6000.sh  training_ablations_c5_o3.sh
(+46 files in other folders)
